<resources>

    <!-- MainActivity -->
    <string name="app_name">Coursera</string>
    <string name="full_name">Nombre completo</string>
    <string name="birthdate">Fecha Nacimiento</string>
    <string name="phone">Teléfono</string>
    <string name="email">Email</string>
    <string name="contact_description">Descripción Contacto</string>
    <string name="next">Siguiente</string>
    <!-- Validations -->
    <string name="required_full_name">El nombre completo es requerido.</string>
    <string name="required_phone">El teléfono es requerido.</string>
    <string name="required_email">El email completo es requerido.</string>
    <string name="incorrect_email">El email es incorrecto.</string>
    <string name="required_contact_description">La descripción es requerida.</string>

    <!-- ConfirmDataActivity -->
    <string name="confirm_data">Confirmar Datos</string>
    <string name="description">Descripción:</string>
    <string name="edit_data">Editar Datos</string>

</resources>
