<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="semana2.curso3.coursera.ConfirmDataActivity">

    <TextView
        android:id="@+id/tv_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/full_name"
        android:textSize="@dimen/text_size"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_birthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/birthdate"
        android:textSize="@dimen/text_size"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/phone"
        android:textSize="@dimen/text_size"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/email"
        android:textSize="@dimen/text_size"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/description"
            android:textSize="@dimen/text_size"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_contact_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/activity_vertical_margin"
            android:textSize="@dimen/text_size"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_edit_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/edit_data"
        android:textSize="@dimen/text_size"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:background="@color/colorPrimary"/>

</LinearLayout>
